# Hoffman0Agent

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
knowledge/: 5MEODMT-PROMPTSTACK.md  9D-ACTIVATION-GUIDE.md  9D-FRAMEWORK.md  CANNABIS-PROMPTSTACK.md  DMT-PROMPTSTACK.md  IBOGAINE-PROMPTSTACK.md  KETAMINE-PROMPTSTACK.md  LSD-25-PROMPTSTACK.md  MDMA-PROMPTSTACK.md  MESCALINE-PROMPTSTACK.md  PSILOCYBIN-PROMPTSTACK.md
migrations/: 001_hofmann_memory.sql
public/: index.html
services/: claude_service.py  elevenlabs_tts.py  knowledge_loader.py  memory.py  prompt_builder.py
