[project]
name = "hofmann-agent"
version = "1.0.0"
description = "9D Psychedelic Consciousness Voice Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "elevenlabs>=1.15.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
